--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Directory Listing of ./</h1>
         <ul>
-            <li><a href="/marketing-ui-v1.0.0/index.html">marketing-ui-v1.0.0</a></li>
+            <li><a href="marketing-ui-v1.0.0/">marketing-ui-v1.0.0</a></li>
         </ul>
     </body>
     </html>
