--- a/marketing-ui-v1.0.0/src/banners/index.html
+++ b/marketing-ui-v1.0.0/src/banners/index.html
@@ -9,11 +9,11 @@
     <body>
         <h1>Directory Listing of marketing-ui-v1.0.0/src/banners</h1>
         <ul>
-            <li><a href="/marketing-ui-v1.0.0/src/banners/announcement.html">announcement.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/banners/cta-banner.html">cta-banner.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/banners/default.html">default.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/banners/informational.html">informational.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/banners/launch-banner.html">launch-banner.html</a></li>
+            <li><a href="./announcement.html">announcement.html</a></li>
+<li><a href="./cta-banner.html">cta-banner.html</a></li>
+<li><a href="./default.html">default.html</a></li>
+<li><a href="./informational.html">informational.html</a></li>
+<li><a href="./launch-banner.html">launch-banner.html</a></li>
         </ul>
     </body>
     </html>
