--- a/marketing-ui-v1.0.0/src/contact-forms/index.html
+++ b/marketing-ui-v1.0.0/src/contact-forms/index.html
@@ -9,11 +9,11 @@
     <body>
         <h1>Directory Listing of marketing-ui-v1.0.0/src/contact-forms</h1>
         <ul>
-            <li><a href="/marketing-ui-v1.0.0/src/contact-forms/address.html">address.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/contact-forms/background-image.html">background-image.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/contact-forms/default.html">default.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/contact-forms/help-center.html">help-center.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/contact-forms/links.html">links.html</a></li>
+            <li><a href="./address.html">address.html</a></li>
+<li><a href="./background-image.html">background-image.html</a></li>
+<li><a href="./default.html">default.html</a></li>
+<li><a href="./help-center.html">help-center.html</a></li>
+<li><a href="./links.html">links.html</a></li>
         </ul>
     </body>
     </html>
