--- a/marketing-ui-v1.0.0/src/faq-sections/index.html
+++ b/marketing-ui-v1.0.0/src/faq-sections/index.html
@@ -9,11 +9,11 @@
     <body>
         <h1>Directory Listing of marketing-ui-v1.0.0/src/faq-sections</h1>
         <ul>
-            <li><a href="/marketing-ui-v1.0.0/src/faq-sections/accordion.html">accordion.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/faq-sections/default.html">default.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/faq-sections/grid-layout.html">grid-layout.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/faq-sections/help-center-search.html">help-center-search.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/faq-sections/help-center.html">help-center.html</a></li>
+            <li><a href="./accordion.html">accordion.html</a></li>
+<li><a href="./default.html">default.html</a></li>
+<li><a href="./grid-layout.html">grid-layout.html</a></li>
+<li><a href="./help-center-search.html">help-center-search.html</a></li>
+<li><a href="./help-center.html">help-center.html</a></li>
         </ul>
     </body>
     </html>
