--- a/marketing-ui-v1.0.0/src/index.html
+++ b/marketing-ui-v1.0.0/src/index.html
@@ -9,32 +9,32 @@
     <body>
         <h1>Directory Listing of marketing-ui-v1.0.0/src</h1>
         <ul>
-            <li><a href="/404-pages/index.html">404-pages</a></li>
-<li><a href="/500-pages/index.html">500-pages</a></li>
-<li><a href="/account-recovery/index.html">account-recovery</a></li>
-<li><a href="/banners/index.html">banners</a></li>
-<li><a href="/contact-forms/index.html">contact-forms</a></li>
-<li><a href="/content-sections/index.html">content-sections</a></li>
-<li><a href="/cookie-consent/index.html">cookie-consent</a></li>
-<li><a href="/cta-sections/index.html">cta-sections</a></li>
-<li><a href="/customer-logos/index.html">customer-logos</a></li>
-<li><a href="/faq-sections/index.html">faq-sections</a></li>
-<li><a href="/feature-sections/index.html">feature-sections</a></li>
-<li><a href="/footer-sections/index.html">footer-sections</a></li>
-<li><a href="/headers/index.html">headers</a></li>
-<li><a href="/hero-sections/index.html">hero-sections</a></li>
-<li><a href="/login-forms/index.html">login-forms</a></li>
-<li><a href="/maintenance-pages/index.html">maintenance-pages</a></li>
-<li><a href="/newsletter-sections/index.html">newsletter-sections</a></li>
-<li><a href="/popups/index.html">popups</a></li>
-<li><a href="/pricing-tables/index.html">pricing-tables</a></li>
-<li><a href="/register-forms/index.html">register-forms</a></li>
-<li><a href="/reset-password-forms/index.html">reset-password-forms</a></li>
-<li><a href="/social-proof/index.html">social-proof</a></li>
-<li><a href="/team-sections/index.html">team-sections</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/template.html">template.html</a></li>
-<li><a href="/testimonial-sections/index.html">testimonial-sections</a></li>
-<li><a href="/user-onboarding/index.html">user-onboarding</a></li>
+            <li><a href="404-pages/">404-pages</a></li>
+<li><a href="500-pages/">500-pages</a></li>
+<li><a href="account-recovery/">account-recovery</a></li>
+<li><a href="banners/">banners</a></li>
+<li><a href="contact-forms/">contact-forms</a></li>
+<li><a href="content-sections/">content-sections</a></li>
+<li><a href="cookie-consent/">cookie-consent</a></li>
+<li><a href="cta-sections/">cta-sections</a></li>
+<li><a href="customer-logos/">customer-logos</a></li>
+<li><a href="faq-sections/">faq-sections</a></li>
+<li><a href="feature-sections/">feature-sections</a></li>
+<li><a href="footer-sections/">footer-sections</a></li>
+<li><a href="headers/">headers</a></li>
+<li><a href="hero-sections/">hero-sections</a></li>
+<li><a href="login-forms/">login-forms</a></li>
+<li><a href="maintenance-pages/">maintenance-pages</a></li>
+<li><a href="newsletter-sections/">newsletter-sections</a></li>
+<li><a href="popups/">popups</a></li>
+<li><a href="pricing-tables/">pricing-tables</a></li>
+<li><a href="register-forms/">register-forms</a></li>
+<li><a href="reset-password-forms/">reset-password-forms</a></li>
+<li><a href="social-proof/">social-proof</a></li>
+<li><a href="team-sections/">team-sections</a></li>
+<li><a href="./template.html">template.html</a></li>
+<li><a href="testimonial-sections/">testimonial-sections</a></li>
+<li><a href="user-onboarding/">user-onboarding</a></li>
         </ul>
     </body>
     </html>
