--- a/marketing-ui-v1.0.0/src/login-forms/index.html
+++ b/marketing-ui-v1.0.0/src/login-forms/index.html
@@ -9,11 +9,11 @@
     <body>
         <h1>Directory Listing of marketing-ui-v1.0.0/src/login-forms</h1>
         <ul>
-            <li><a href="/marketing-ui-v1.0.0/src/login-forms/background-image.html">background-image.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/login-forms/default.html">default.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/login-forms/description.html">description.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/login-forms/illustration.html">illustration.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/login-forms/social-media.html">social-media.html</a></li>
+            <li><a href="./background-image.html">background-image.html</a></li>
+<li><a href="./default.html">default.html</a></li>
+<li><a href="./description.html">description.html</a></li>
+<li><a href="./illustration.html">illustration.html</a></li>
+<li><a href="./social-media.html">social-media.html</a></li>
         </ul>
     </body>
     </html>
