--- a/marketing-ui-v1.0.0/src/social-proof/index.html
+++ b/marketing-ui-v1.0.0/src/social-proof/index.html
@@ -9,12 +9,12 @@
     <body>
         <h1>Directory Listing of marketing-ui-v1.0.0/src/social-proof</h1>
         <ul>
-            <li><a href="/marketing-ui-v1.0.0/src/social-proof/card-statistics.html">card-statistics.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/social-proof/carousel-slider.html">carousel-slider.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/social-proof/default.html">default.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/social-proof/heading-statistics.html">heading-statistics.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/social-proof/icon-statistics.html">icon-statistics.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/social-proof/illustration.html">illustration.html</a></li>
+            <li><a href="./card-statistics.html">card-statistics.html</a></li>
+<li><a href="./carousel-slider.html">carousel-slider.html</a></li>
+<li><a href="./default.html">default.html</a></li>
+<li><a href="./heading-statistics.html">heading-statistics.html</a></li>
+<li><a href="./icon-statistics.html">icon-statistics.html</a></li>
+<li><a href="./illustration.html">illustration.html</a></li>
         </ul>
     </body>
     </html>
