--- a/marketing-ui-v1.0.0/src/user-onboarding/index.html
+++ b/marketing-ui-v1.0.0/src/user-onboarding/index.html
@@ -9,10 +9,10 @@
     <body>
         <h1>Directory Listing of marketing-ui-v1.0.0/src/user-onboarding</h1>
         <ul>
-            <li><a href="/marketing-ui-v1.0.0/src/user-onboarding/account-details.html">account-details.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/user-onboarding/account-type.html">account-type.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/user-onboarding/email-verification.html">email-verification.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/user-onboarding/success-message.html">success-message.html</a></li>
+            <li><a href="./account-details.html">account-details.html</a></li>
+<li><a href="./account-type.html">account-type.html</a></li>
+<li><a href="./email-verification.html">email-verification.html</a></li>
+<li><a href="./success-message.html">success-message.html</a></li>
         </ul>
     </body>
     </html>
