--- a/marketing-ui-v1.0.0/index.html
+++ b/marketing-ui-v1.0.0/index.html
@@ -9,8 +9,8 @@
     <body>
         <h1>Directory Listing of marketing-ui-v1.0.0</h1>
         <ul>
-            <li><a href="/dist/index.html">dist</a></li>
-<li><a href="/src/index.html">src</a></li>
+            <li><a href="dist/">dist</a></li>
+<li><a href="src/">src</a></li>
         </ul>
     </body>
     </html>
