--- a/marketing-ui-v1.0.0/src/404-pages/index.html
+++ b/marketing-ui-v1.0.0/src/404-pages/index.html
@@ -9,9 +9,9 @@
     <body>
         <h1>Directory Listing of marketing-ui-v1.0.0/src/404-pages</h1>
         <ul>
-            <li><a href="/marketing-ui-v1.0.0/src/404-pages/default.html">default.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/404-pages/illustration.html">illustration.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/404-pages/search-bar.html">search-bar.html</a></li>
+            <li><a href="./default.html">default.html</a></li>
+<li><a href="./illustration.html">illustration.html</a></li>
+<li><a href="./search-bar.html">search-bar.html</a></li>
         </ul>
     </body>
     </html>
