--- a/marketing-ui-v1.0.0/src/account-recovery/index.html
+++ b/marketing-ui-v1.0.0/src/account-recovery/index.html
@@ -9,11 +9,11 @@
     <body>
         <h1>Directory Listing of marketing-ui-v1.0.0/src/account-recovery</h1>
         <ul>
-            <li><a href="/marketing-ui-v1.0.0/src/account-recovery/background-image.html">background-image.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/account-recovery/default.html">default.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/account-recovery/description.html">description.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/account-recovery/feature-list.html">feature-list.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/account-recovery/illustration.html">illustration.html</a></li>
+            <li><a href="./background-image.html">background-image.html</a></li>
+<li><a href="./default.html">default.html</a></li>
+<li><a href="./description.html">description.html</a></li>
+<li><a href="./feature-list.html">feature-list.html</a></li>
+<li><a href="./illustration.html">illustration.html</a></li>
         </ul>
     </body>
     </html>
