--- a/marketing-ui-v1.0.0/src/content-sections/index.html
+++ b/marketing-ui-v1.0.0/src/content-sections/index.html
@@ -9,13 +9,13 @@
     <body>
         <h1>Directory Listing of marketing-ui-v1.0.0/src/content-sections</h1>
         <ul>
-            <li><a href="/marketing-ui-v1.0.0/src/content-sections/card-images.html">card-images.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/content-sections/description.html">description.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/content-sections/heading-description.html">heading-description.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/content-sections/heading-images.html">heading-images.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/content-sections/image-gallery.html">image-gallery.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/content-sections/social-proof.html">social-proof.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/content-sections/video-embed.html">video-embed.html</a></li>
+            <li><a href="./card-images.html">card-images.html</a></li>
+<li><a href="./description.html">description.html</a></li>
+<li><a href="./heading-description.html">heading-description.html</a></li>
+<li><a href="./heading-images.html">heading-images.html</a></li>
+<li><a href="./image-gallery.html">image-gallery.html</a></li>
+<li><a href="./social-proof.html">social-proof.html</a></li>
+<li><a href="./video-embed.html">video-embed.html</a></li>
         </ul>
     </body>
     </html>
