--- a/marketing-ui-v1.0.0/src/cookie-consent/index.html
+++ b/marketing-ui-v1.0.0/src/cookie-consent/index.html
@@ -9,10 +9,10 @@
     <body>
         <h1>Directory Listing of marketing-ui-v1.0.0/src/cookie-consent</h1>
         <ul>
-            <li><a href="/marketing-ui-v1.0.0/src/cookie-consent/banner.html">banner.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/cookie-consent/gdpr.html">gdpr.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/cookie-consent/modal.html">modal.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/cookie-consent/popup.html">popup.html</a></li>
+            <li><a href="./banner.html">banner.html</a></li>
+<li><a href="./gdpr.html">gdpr.html</a></li>
+<li><a href="./modal.html">modal.html</a></li>
+<li><a href="./popup.html">popup.html</a></li>
         </ul>
     </body>
     </html>
