--- a/marketing-ui-v1.0.0/src/cta-sections/index.html
+++ b/marketing-ui-v1.0.0/src/cta-sections/index.html
@@ -9,14 +9,14 @@
     <body>
         <h1>Directory Listing of marketing-ui-v1.0.0/src/cta-sections</h1>
         <ul>
-            <li><a href="/marketing-ui-v1.0.0/src/cta-sections/cards-icons.html">cards-icons.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/cta-sections/default.html">default.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/cta-sections/email-signup.html">email-signup.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/cta-sections/finance-trading.html">finance-trading.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/cta-sections/heading-cta.html">heading-cta.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/cta-sections/image-cta-button.html">image-cta-button.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/cta-sections/mobile-app.html">mobile-app.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/cta-sections/qr-code.html">qr-code.html</a></li>
+            <li><a href="./cards-icons.html">cards-icons.html</a></li>
+<li><a href="./default.html">default.html</a></li>
+<li><a href="./email-signup.html">email-signup.html</a></li>
+<li><a href="./finance-trading.html">finance-trading.html</a></li>
+<li><a href="./heading-cta.html">heading-cta.html</a></li>
+<li><a href="./image-cta-button.html">image-cta-button.html</a></li>
+<li><a href="./mobile-app.html">mobile-app.html</a></li>
+<li><a href="./qr-code.html">qr-code.html</a></li>
         </ul>
     </body>
     </html>
