--- a/marketing-ui-v1.0.0/src/customer-logos/index.html
+++ b/marketing-ui-v1.0.0/src/customer-logos/index.html
@@ -9,10 +9,10 @@
     <body>
         <h1>Directory Listing of marketing-ui-v1.0.0/src/customer-logos</h1>
         <ul>
-            <li><a href="/marketing-ui-v1.0.0/src/customer-logos/cards-with-cta.html">cards-with-cta.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/customer-logos/cards-with-description.html">cards-with-description.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/customer-logos/default.html">default.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/customer-logos/heading-grid-layout.html">heading-grid-layout.html</a></li>
+            <li><a href="./cards-with-cta.html">cards-with-cta.html</a></li>
+<li><a href="./cards-with-description.html">cards-with-description.html</a></li>
+<li><a href="./default.html">default.html</a></li>
+<li><a href="./heading-grid-layout.html">heading-grid-layout.html</a></li>
         </ul>
     </body>
     </html>
