--- a/marketing-ui-v1.0.0/src/feature-sections/index.html
+++ b/marketing-ui-v1.0.0/src/feature-sections/index.html
@@ -9,16 +9,16 @@
     <body>
         <h1>Directory Listing of marketing-ui-v1.0.0/src/feature-sections</h1>
         <ul>
-            <li><a href="/marketing-ui-v1.0.0/src/feature-sections/alternate.html">alternate.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/feature-sections/card-list.html">card-list.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/feature-sections/comparison.html">comparison.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/feature-sections/cta-list.html">cta-list.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/feature-sections/default.html">default.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/feature-sections/description-icon-list.html">description-icon-list.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/feature-sections/icon-list-cta.html">icon-list-cta.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/feature-sections/icons-list.html">icons-list.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/feature-sections/icons.html">icons.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/feature-sections/image-list.html">image-list.html</a></li>
+            <li><a href="./alternate.html">alternate.html</a></li>
+<li><a href="./card-list.html">card-list.html</a></li>
+<li><a href="./comparison.html">comparison.html</a></li>
+<li><a href="./cta-list.html">cta-list.html</a></li>
+<li><a href="./default.html">default.html</a></li>
+<li><a href="./description-icon-list.html">description-icon-list.html</a></li>
+<li><a href="./icon-list-cta.html">icon-list-cta.html</a></li>
+<li><a href="./icons-list.html">icons-list.html</a></li>
+<li><a href="./icons.html">icons.html</a></li>
+<li><a href="./image-list.html">image-list.html</a></li>
         </ul>
     </body>
     </html>
