--- a/marketing-ui-v1.0.0/src/footer-sections/index.html
+++ b/marketing-ui-v1.0.0/src/footer-sections/index.html
@@ -9,13 +9,13 @@
     <body>
         <h1>Directory Listing of marketing-ui-v1.0.0/src/footer-sections</h1>
         <ul>
-            <li><a href="/marketing-ui-v1.0.0/src/footer-sections/default.html">default.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/footer-sections/flowbite-footer.html">flowbite-footer.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/footer-sections/newsletter-footer.html">newsletter-footer.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/footer-sections/pre-footer.html">pre-footer.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/footer-sections/sitemap-links.html">sitemap-links.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/footer-sections/sitemap-logo.html">sitemap-logo.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/footer-sections/social-media.html">social-media.html</a></li>
+            <li><a href="./default.html">default.html</a></li>
+<li><a href="./flowbite-footer.html">flowbite-footer.html</a></li>
+<li><a href="./newsletter-footer.html">newsletter-footer.html</a></li>
+<li><a href="./pre-footer.html">pre-footer.html</a></li>
+<li><a href="./sitemap-links.html">sitemap-links.html</a></li>
+<li><a href="./sitemap-logo.html">sitemap-logo.html</a></li>
+<li><a href="./social-media.html">social-media.html</a></li>
         </ul>
     </body>
     </html>
