--- a/marketing-ui-v1.0.0/src/headers/index.html
+++ b/marketing-ui-v1.0.0/src/headers/index.html
@@ -9,14 +9,14 @@
     <body>
         <h1>Directory Listing of marketing-ui-v1.0.0/src/headers</h1>
         <ul>
-            <li><a href="/marketing-ui-v1.0.0/src/headers/centered.html">centered.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/headers/default.html">default.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/headers/dropdown.html">dropdown.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/headers/mega-dropdown.html">mega-dropdown.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/headers/mega-menu.html">mega-menu.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/headers/search.html">search.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/headers/sub-navbar.html">sub-navbar.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/headers/user-dropdown.html">user-dropdown.html</a></li>
+            <li><a href="./centered.html">centered.html</a></li>
+<li><a href="./default.html">default.html</a></li>
+<li><a href="./dropdown.html">dropdown.html</a></li>
+<li><a href="./mega-dropdown.html">mega-dropdown.html</a></li>
+<li><a href="./mega-menu.html">mega-menu.html</a></li>
+<li><a href="./search.html">search.html</a></li>
+<li><a href="./sub-navbar.html">sub-navbar.html</a></li>
+<li><a href="./user-dropdown.html">user-dropdown.html</a></li>
         </ul>
     </body>
     </html>
