--- a/marketing-ui-v1.0.0/src/hero-sections/index.html
+++ b/marketing-ui-v1.0.0/src/hero-sections/index.html
@@ -9,19 +9,19 @@
     <body>
         <h1>Directory Listing of marketing-ui-v1.0.0/src/hero-sections</h1>
         <ul>
-            <li><a href="/marketing-ui-v1.0.0/src/hero-sections/crypto.html">crypto.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/hero-sections/cta-app-preview.html">cta-app-preview.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/hero-sections/cta-screenshot-download.html">cta-screenshot-download.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/hero-sections/default.html">default.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/hero-sections/email-signup-video.html">email-signup-video.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/hero-sections/grid-cards.html">grid-cards.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/hero-sections/illustration.html">illustration.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/hero-sections/image-cover.html">image-cover.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/hero-sections/search-bar.html">search-bar.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/hero-sections/search-with-datepicker.html">search-with-datepicker.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/hero-sections/signup-cta.html">signup-cta.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/hero-sections/video-embed-cta.html">video-embed-cta.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/hero-sections/visual-image-heading.html">visual-image-heading.html</a></li>
+            <li><a href="./crypto.html">crypto.html</a></li>
+<li><a href="./cta-app-preview.html">cta-app-preview.html</a></li>
+<li><a href="./cta-screenshot-download.html">cta-screenshot-download.html</a></li>
+<li><a href="./default.html">default.html</a></li>
+<li><a href="./email-signup-video.html">email-signup-video.html</a></li>
+<li><a href="./grid-cards.html">grid-cards.html</a></li>
+<li><a href="./illustration.html">illustration.html</a></li>
+<li><a href="./image-cover.html">image-cover.html</a></li>
+<li><a href="./search-bar.html">search-bar.html</a></li>
+<li><a href="./search-with-datepicker.html">search-with-datepicker.html</a></li>
+<li><a href="./signup-cta.html">signup-cta.html</a></li>
+<li><a href="./video-embed-cta.html">video-embed-cta.html</a></li>
+<li><a href="./visual-image-heading.html">visual-image-heading.html</a></li>
         </ul>
     </body>
     </html>
