--- a/marketing-ui-v1.0.0/src/newsletter-sections/index.html
+++ b/marketing-ui-v1.0.0/src/newsletter-sections/index.html
@@ -9,11 +9,11 @@
     <body>
         <h1>Directory Listing of marketing-ui-v1.0.0/src/newsletter-sections</h1>
         <ul>
-            <li><a href="/marketing-ui-v1.0.0/src/newsletter-sections/banner-email.html">banner-email.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/newsletter-sections/default.html">default.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/newsletter-sections/email-signup-card.html">email-signup-card.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/newsletter-sections/modal-signup.html">modal-signup.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/newsletter-sections/popup-email.html">popup-email.html</a></li>
+            <li><a href="./banner-email.html">banner-email.html</a></li>
+<li><a href="./default.html">default.html</a></li>
+<li><a href="./email-signup-card.html">email-signup-card.html</a></li>
+<li><a href="./modal-signup.html">modal-signup.html</a></li>
+<li><a href="./popup-email.html">popup-email.html</a></li>
         </ul>
     </body>
     </html>
