--- a/marketing-ui-v1.0.0/src/popups/index.html
+++ b/marketing-ui-v1.0.0/src/popups/index.html
@@ -9,11 +9,11 @@
     <body>
         <h1>Directory Listing of marketing-ui-v1.0.0/src/popups</h1>
         <ul>
-            <li><a href="/marketing-ui-v1.0.0/src/popups/authentication.html">authentication.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/popups/default.html">default.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/popups/newsletter.html">newsletter.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/popups/promotional.html">promotional.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/popups/survey.html">survey.html</a></li>
+            <li><a href="./authentication.html">authentication.html</a></li>
+<li><a href="./default.html">default.html</a></li>
+<li><a href="./newsletter.html">newsletter.html</a></li>
+<li><a href="./promotional.html">promotional.html</a></li>
+<li><a href="./survey.html">survey.html</a></li>
         </ul>
     </body>
     </html>
