--- a/marketing-ui-v1.0.0/src/pricing-tables/index.html
+++ b/marketing-ui-v1.0.0/src/pricing-tables/index.html
@@ -9,13 +9,13 @@
     <body>
         <h1>Directory Listing of marketing-ui-v1.0.0/src/pricing-tables</h1>
         <ul>
-            <li><a href="/marketing-ui-v1.0.0/src/pricing-tables/comparison-table.html">comparison-table.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/pricing-tables/default.html">default.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/pricing-tables/feature-list.html">feature-list.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/pricing-tables/highlighted-plan.html">highlighted-plan.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/pricing-tables/horizontal.html">horizontal.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/pricing-tables/pricing-tabs.html">pricing-tabs.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/pricing-tables/pricing-toggle.html">pricing-toggle.html</a></li>
+            <li><a href="./comparison-table.html">comparison-table.html</a></li>
+<li><a href="./default.html">default.html</a></li>
+<li><a href="./feature-list.html">feature-list.html</a></li>
+<li><a href="./highlighted-plan.html">highlighted-plan.html</a></li>
+<li><a href="./horizontal.html">horizontal.html</a></li>
+<li><a href="./pricing-tabs.html">pricing-tabs.html</a></li>
+<li><a href="./pricing-toggle.html">pricing-toggle.html</a></li>
         </ul>
     </body>
     </html>
