--- a/marketing-ui-v1.0.0/src/reset-password-forms/index.html
+++ b/marketing-ui-v1.0.0/src/reset-password-forms/index.html
@@ -9,11 +9,11 @@
     <body>
         <h1>Directory Listing of marketing-ui-v1.0.0/src/reset-password-forms</h1>
         <ul>
-            <li><a href="/marketing-ui-v1.0.0/src/reset-password-forms/background-image.html">background-image.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/reset-password-forms/default.html">default.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/reset-password-forms/description.html">description.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/reset-password-forms/features.html">features.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/reset-password-forms/illustration.html">illustration.html</a></li>
+            <li><a href="./background-image.html">background-image.html</a></li>
+<li><a href="./default.html">default.html</a></li>
+<li><a href="./description.html">description.html</a></li>
+<li><a href="./features.html">features.html</a></li>
+<li><a href="./illustration.html">illustration.html</a></li>
         </ul>
     </body>
     </html>
