--- a/marketing-ui-v1.0.0/src/team-sections/index.html
+++ b/marketing-ui-v1.0.0/src/team-sections/index.html
@@ -9,11 +9,11 @@
     <body>
         <h1>Directory Listing of marketing-ui-v1.0.0/src/team-sections</h1>
         <ul>
-            <li><a href="/marketing-ui-v1.0.0/src/team-sections/carousel-slider.html">carousel-slider.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/team-sections/default.html">default.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/team-sections/grid-cards.html">grid-cards.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/team-sections/grid-clean.html">grid-clean.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/team-sections/team-cards.html">team-cards.html</a></li>
+            <li><a href="./carousel-slider.html">carousel-slider.html</a></li>
+<li><a href="./default.html">default.html</a></li>
+<li><a href="./grid-cards.html">grid-cards.html</a></li>
+<li><a href="./grid-clean.html">grid-clean.html</a></li>
+<li><a href="./team-cards.html">team-cards.html</a></li>
         </ul>
     </body>
     </html>
