--- a/marketing-ui-v1.0.0/src/testimonial-sections/index.html
+++ b/marketing-ui-v1.0.0/src/testimonial-sections/index.html
@@ -9,11 +9,11 @@
     <body>
         <h1>Directory Listing of marketing-ui-v1.0.0/src/testimonial-sections</h1>
         <ul>
-            <li><a href="/marketing-ui-v1.0.0/src/testimonial-sections/blockquote.html">blockquote.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/testimonial-sections/cards.html">cards.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/testimonial-sections/carousel-slider.html">carousel-slider.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/testimonial-sections/grid-layout.html">grid-layout.html</a></li>
-<li><a href="/marketing-ui-v1.0.0/src/testimonial-sections/testimonial-tabs.html">testimonial-tabs.html</a></li>
+            <li><a href="./blockquote.html">blockquote.html</a></li>
+<li><a href="./cards.html">cards.html</a></li>
+<li><a href="./carousel-slider.html">carousel-slider.html</a></li>
+<li><a href="./grid-layout.html">grid-layout.html</a></li>
+<li><a href="./testimonial-tabs.html">testimonial-tabs.html</a></li>
         </ul>
     </body>
     </html>
