--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <h1>Directory Listing of ./</h1>
         <ul>
             <li><a href="marketing-ui-v1.0.0/">marketing-ui-v1.0.0</a></li>
+<li><a href="publisher-ui-blocks-v1.0.0/">publisher-ui-blocks-v1.0.0</a></li>
         </ul>
     </body>
     </html>
